[gd_scene load_steps=6 format=2]

[ext_resource path="res://MarCatchSheep/UI_Elements/Scripts/PauseMenuGUI.gd" type="Script" id=1]
[ext_resource path="res://Fonts/MochiResized.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/MochiTooltip.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/MochiyPopPOne-Regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=1]
use_filter = true
font_data = ExtResource( 4 )

[node name="PauseMenu" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color( 1, 1, 1, 0.3 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0431373, 0.0705882, 0.2, 1 )

[node name="GridContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -140.0
margin_top = -78.0
margin_right = 140.0
margin_bottom = 78.0

[node name="VBoxContainer" type="VBoxContainer" parent="GridContainer"]
margin_right = 280.0
margin_bottom = 156.0

[node name="Title" type="Label" parent="GridContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 48.0
custom_fonts/font = ExtResource( 2 )
text = "Game Paused"
align = 1
uppercase = true

[node name="Resume" type="ToolButton" parent="GridContainer/VBoxContainer"]
margin_top = 52.0
margin_right = 280.0
margin_bottom = 84.0
custom_fonts/font = ExtResource( 3 )
text = "Resume"

[node name="Return" type="ToolButton" parent="GridContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 280.0
margin_bottom = 120.0
custom_fonts/font = ExtResource( 3 )
text = "Return to Title"

[node name="Quit" type="ToolButton" parent="GridContainer/VBoxContainer"]
margin_top = 124.0
margin_right = 280.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 3 )
text = "Restart"

[node name="ScreenshotModeDisplay" type="Label" parent="."]
margin_right = 212.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
text = "Screenshot Mode: OFF"

[connection signal="pressed" from="GridContainer/VBoxContainer/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="GridContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="GridContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
